[package]
name = "error-code-derive"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.9"
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = {version= "2.0.65", features = ["extra-traits"] }
